2009-10-23  Jaroslav Hajek  <highegg@gmail.com>

	* idx-vector.cc (idx_vector::idx_range_rep::idx_range_rep
	(octave_idx_type, octave_idx_type, octave_idx_type)):
	Improve checking.

2009-10-21  John W. Eaton  <jwe@octave.org>

	* oct-time.h 	(octave_time::octave_time (time_t t, int us)):
	New constructor.
	(operator + (const octave_time&, const octave_time&)): New function.

	* file-stat.h (base_file_stat::time_resolution): New function.

2009-10-20  Jaroslav Hajek  <highegg@gmail.com>

	* bsxfun-decl.h, bsxfun-defs.cc: New sources.
	* Makefile.in: Add them.
	* dim-vector.h (dim_vector::compute_index,
	dim_vector::increment_index): Fix.
	* mx-inlines.cc (DEFMXMAPPER, DEFMXLOCALMAPPER): New macros.
	(mx_inline_xmin, mx_inline_xmax): New loops.
	(mx_inline_fun): Remove.
	* oct-inttypes.h (xmin (const octave_int<T>&, const octave_int<T>&),
	xmax (const octave_int<T>&, const octave_int<T>&)):
	New inline functions.

	* CNDArray.cc: Define bsxfun operations.
	* boolNDArray.cc: Ditto.
	* dNDArray.cc: Ditto.
	* fCNDArray.cc: Ditto.
	* fNDArray.cc: Ditto.
	* int16NDArray.cc: Ditto.
	* int32NDArray.cc: Ditto.
	* int64NDArray.cc: Ditto.
	* int8NDArray.cc: Ditto.
	* uint16NDArray.cc: Ditto.
	* uint32NDArray.cc: Ditto.
	* uint64NDArray.cc: Ditto.
	* uint8NDArray.cc: Ditto.

	* CNDArray.h: Declare bsxfun operations.
	* boolNDArray.h: Ditto.
	* dNDArray.h: Ditto.
	* fCNDArray.h: Ditto.
	* fNDArray.h: Ditto.
	* int16NDArray.h: Ditto.
	* int32NDArray.h: Ditto.
	* int64NDArray.h: Ditto.
	* int8NDArray.h: Ditto.
	* uint16NDArray.h: Ditto.
	* uint32NDArray.h: Ditto.
	* uint64NDArray.h: Ditto.
	* uint8NDArray.h: Ditto.

2009-10-19  Jaroslav Hajek  <highegg@gmail.com>

	* dim-vector.h (dim_vector::compute_index,
	dim_vector::increment_index, dim_vector::cumulative,
	dim_vector::cum_compute_index): New methods.

2009-10-18  Carsten Clark  <tantumquantum+gnuoctave@gmail.com>

	* Makefile.in: Remove ArrayN.cc.

2009-10-18  Jaroslav Hajek  <highegg@gmail.com>
