@@ -1,3 +1,15 @@
+2009-10-27  David Bateman  <dbateman@free.fr>
+
+	* SparsedbleLU.cc (SparseLU::SparseLU (const SparseMatrix&,
+	const Matrix&, bool), SparseLU::SparseLU (const SparseMatrix&,
+	const ColumnVector&, const Matrix&, boo, bool, double, bool,
+	bool)): Fix test for valid pivot tolerance.
+	* SparseCmplxLU.cc (SparseComplexLU::SparseComplexLU 
+	(const SparseComplexMatrix&, const Matrix&, bool), 
+	SparseComplexLU::SparseComplexLU (const SparseComplexMatrix&,
+	const ColumnVector&, const Matrix&, boo, bool, double, bool,
+	bool)): Ditto.
+
 2009-10-23  Jaroslav Hajek  <highegg@gmail.com>
 
 	* idx-vector.cc (idx_vector::idx_range_rep::idx_range_rep
